--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-NEXT_PUBLIC_EWS_KEY=465sf321f3adf13
-NEXT_PUBLIC_PACKET=gt48er9654a3sdf12d
-NEXT_PUBLIC_T_TEXTSET = asgsdg
-NEXT_PUBLIC_T_COMMAND = dgsasadg
-NEXT_PUBLIC_T_C_CLEAR = sadgsdg
-NEXT_PUBLIC_T_C_MOVE = hdafg
-NEXT_PUBLIC_T_C_DIR = hsdf
-NEXT_PUBLIC_T_C_PATH = SDF
-NEXT_PUBLIC_T_C_READ = fdsafsad
-NEXT_PUBLIC_T_C_REDIRECT = dgasdfsad
-NEXT_PUBLIC_T_C_JUMPSCARE = gdds
-NEXT_PUBLIC_T_C_WATCHING = gasd
-NEXT_PUBLIC_PX_STATUS = adsf
-NEXT_PUBLIC_PX_PROGRESS = agdsad
-NEXT_PUBLIC_PX_ANOMALY = gsadg
+NEXT_PUBLIC_EWS_KEY=5465ds4f3a2sfas
+NEXT_PUBLIC_PACKET=31t653213fasda
+NEXT_PUBLIC_T_TEXTSET = a3fsaw
+NEXT_PUBLIC_T_COMMAND = jdqwsd
+NEXT_PUBLIC_T_C_CLEAR = asdnka
+NEXT_PUBLIC_T_C_MOVE = ajdras
+NEXT_PUBLIC_T_C_DIR = djaose
+NEXT_PUBLIC_T_C_PATH = ajsdqwe
+NEXT_PUBLIC_T_C_READ = ajdaqer
+NEXT_PUBLIC_T_C_REDIRECT = 5tq62wq
+NEXT_PUBLIC_T_C_JUMPSCARE = akeqwrsd
+NEXT_PUBLIC_T_C_WATCHING = ajstqwrd
+NEXT_PUBLIC_PX_STATUS = adwtersd
+NEXT_PUBLIC_PX_PROGRESS = twtiqowr
+NEXT_PUBLIC_PX_ANOMALY = ttweidk
